<resources>
    <string name="app_name">CNC PRO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_listing">Todos mis CNC</string>
    <string name="menu_control">Control</string>
    <string name="menu_adding">Agregar Archivo</string>

    <!-- phone auth !-->
    <string name="sign_out">Salir</string>
    <string name="resend_phone_auth">Re-enviar</string>
    <string name="verify_phone_auth">Varificar</string>
    <string name="start_phone_auth">Comenzar</string>
    <string name="hint_verification_code">Verificar Codigo</string>
    <string name="hint_phone_number">Numero Celular</string>
    <string name="phone_title_text">Numero Celular</string>
    <string name="signed_out">Salir</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="status_code_sent">Codigo enviado</string>
    <string name="status_verification_failed">Verificar fallo</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="signed_in">Acceder</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>

    <string name="action_login">Acceder con....</string>
    <string name="label_phone_auth">Verifica tu numero de telefono</string>
    <string name="menu_actions">Funciones</string>
    <string name="menu_settings">Configuracion</string>
    <string name="nav_menu_drawer_logout">Salir</string>
    <string name="nav_menu_drawer_setting">Configuracion</string>
    <string name="nav_menu_drawer_about_us">Acerca nosotros</string>
    <string name="facebook_app_id">123456</string>
    <string name="select_file">seleccionar archivo</string>

</resources>